removed logs and spacing issues

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -1,15 +1,3 @@
-/*.buttonsRow {
-  margin-bottom: 1px;
-}
-
-
-
-.calculator-body{
-  display: inline-block;
-  width: 30%;
-  margin: 0 auto;
-}*/
-
 .calculator-container{
   margin-top: 70px;
 }
